--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,13 @@ prometheus-api-client = "^0.5.2"
 matplotlib = "^3.6.2"
 numpy = "^1.23.4"
 ipympl = "^0.9.2"
+orjson = "^3.8.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.10.0"
 flake8 = "^5.0.4"
 isort = "^5.10.1"
+pre-commit = "^2.20.0"
 
 [build-system]
 requires = ["poetry-core"]
