--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,15 @@ readme = "README.md"
 version = "0.0.0"
 
 [tool.poetry.dependencies]
+ipympl = "^0.9.2"
 jupyterlab = "^3.5.0"
 matplotlib = "^3.6.2"
 numpy = "^1.23.4"
 orjson = "^3.8.1"
 prometheus-api-client = "^0.5.2"
 python = "^3.10"
+scipy = "^1.9.3"
+ipywidgets = "^8.0.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.10.0"
